// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simulatorAlcohol test start from 100 @12:00Z with deg22(-6h) + alc 1U(+1h) + alc 4U(+2h) 1`] = `
Array [
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  180,
  179,
  178,
  177,
  176,
  175,
  174,
  173,
  172,
  171,
  170,
  169,
  168,
  167,
  166,
  165,
  164,
  163,
  162,
  161,
  160,
  159,
  158,
  157,
  156,
  155,
  154,
  153,
  152,
  151,
  150,
  149,
  148,
  147,
  146,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  145,
  144,
  143,
  142,
  140,
  138,
  136,
  134,
  132,
  130,
  128,
  126,
  124,
  122,
  120,
  118,
  116,
  114,
  112,
  110,
  108,
  106,
  104,
  102,
  100,
  98,
  96,
  94,
  92,
  90,
  88,
  86,
  85,
  84,
  83,
  82,
  81,
  80,
  79,
  79,
  79,
  79,
  79,
  79,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  146,
  145,
  144,
  143,
  142,
  141,
  140,
  139,
  138,
  137,
  136,
]
`;

exports[`simulatorAlcohol test start from 100 @12:00Z with deg22(-6h) + alc 1U(+1h) + alc 4U(+2h) 2`] = `
Array [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0.0020098903116930553,
  0.019626207201217247,
  0.0534460280365163,
  0.0878795050104144,
  0.10833044168375873,
  0.12674791756968745,
  0.14323543567648497,
  0.15789240428181042,
  0.1708142785147389,
  0.18209269743762957,
  0.19181561676283845,
  0.20006743733540855,
  0.20692912950909526,
  0.21247835353941522,
  0.2167895761138352,
  0.21993418313575352,
  0.2219805888755511,
  0.22299434159871434,
  0.22303822577784446,
  0.22217236099227355,
  0.2204542976159961,
  0.21793910939169964,
  0.21467948298583706,
  0.21072580461691637,
  0.20612624384650183,
  0.20092683461980676,
  0.19517155364022448,
  0.18890239615967697,
  0.18215944926426608,
  0.17498096273238417,
  0.1674034175401771,
  0.1594615920870577,
  0.15118862621182758,
  0.14261608306789178,
  0.1337740089240351,
  0.12469099095526495,
  0.1153942130863268,
  0.10590950994864473,
  0.09626141900964297,
  0.08647323093165922,
  0.07656703821596296,
  0.06656378218574406,
  0.05648329836033584,
  0.04634436027138199,
  0.03616472177014473,
  0.02596115787368434,
  0.015749504196215364,
  0.0055446950105580255,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0.003803980548062891,
  0.07636970552601369,
  0.23200563104177552,
  0.4202569163956907,
  0.5243611365232382,
  0.6182045465439596,
  0.7023083497182941,
  0.7771731483404622,
  0.8432796556909894,
  0.9010893853671692,
  0.9510453186700464,
  0.9935725507069652,
  1.0290789158497724,
  1.057955593170306,
  1.0805776924568786,
  1.097304821398028,
  1.1084816345028763,
  1.1144383643109501,
  1.1154913354283291,
  1.1119434619114112,
  1.104084728504472,
  1.0921926562224822,
  1.0765327527563788,
  1.0573589481640775,
  1.0349140162970316,
  1.0094299823990305,
  0.9811285173011631,
  0.9502213186245073,
  0.9169104793900535,
  0.881388844423677,
  0.8438403549325963,
  0.8044403816187254,
  0.7633560466835705,
  0.72074653506891,
  0.6767633952673455,
  0.6315508300269782,
  0.585245977264881,
  0.5379791814947528,
  0.48987425606510066,
  0.4410487364955249,
  0.39161412519014815,
  0.3416761277989615,
  0.2913348814897955,
  0.24068517538582296,
  0.1898166634158979,
  0.13881406981766173,
  0.08775738752618027,
  0.036722069673922005,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`simulatorAlcohol test start from 100 @12:00Z with deg23(-4h) + alc 2U(+1h) 1`] = `
Array [
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  101,
  100,
  99,
  98,
  97,
  96,
  95,
  94,
  93,
  92,
  91,
  90,
  89,
  88,
  87,
  86,
  85,
  84,
  83,
  82,
  81,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  80,
  79,
  78,
  77,
  75,
  73,
  71,
  69,
  67,
  65,
  62,
  59,
  56,
  53,
  50,
  47,
  44,
  41,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  88,
  87,
  86,
  85,
  84,
  83,
  82,
  81,
  80,
  79,
  78,
  77,
  76,
  75,
]
`;

exports[`simulatorAlcohol test start from 100 @12:00Z with deg23(-4h) + alc 2U(+1h) 2`] = `
Array [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0.003803980548062891,
  0.07636970552601369,
  0.23200563104177552,
  0.4202569163956907,
  0.5243611365232382,
  0.6182045465439596,
  0.7023083497182941,
  0.7771731483404622,
  0.8432796556909894,
  0.9010893853671692,
  0.9510453186700464,
  0.9935725507069652,
  1.0290789158497724,
  1.057955593170306,
  1.0805776924568786,
  1.097304821398028,
  1.1084816345028763,
  1.1144383643109501,
  1.1154913354283291,
  1.1119434619114112,
  1.104084728504472,
  1.0921926562224822,
  1.0765327527563788,
  1.0573589481640775,
  1.0349140162970316,
  1.0094299823990305,
  0.9811285173011631,
  0.9502213186245073,
  0.9169104793900535,
  0.881388844423677,
  0.8438403549325963,
  0.8044403816187254,
  0.7633560466835705,
  0.72074653506891,
  0.6767633952673455,
  0.6315508300269782,
  0.585245977264881,
  0.5379791814947528,
  0.48987425606510066,
  0.4410487364955249,
  0.39161412519014815,
  0.3416761277989615,
  0.2913348814897955,
  0.24068517538582296,
  0.1898166634158979,
  0.13881406981766173,
  0.08775738752618027,
  0.036722069673922005,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;
